feat: ArtDetailQueryRepository - fetchAuctionArtsByKeyword 쿼리 로직 구현